--- a/winPage.html
+++ b/winPage.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>
-        Page 2
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,12 +11,8 @@
     <link rel="stylesheet" href="./styles.css"></head>
 
 <body>
-    <h2>Enter password</h2>
-        <input type = "password" required id = "pass1" placeholder="enter">
-        <button type = "button" class = "login" onclick="nextpage1()">Enter</button>
-        <h3>Password is all lowercase</h3>
-        <div class = "try" style="display:block"></div>
-    <script src="./script.js"></script>
+    <h1> You win!</h1>
+    <script src="./script.js" ></script>
     
 </body>
 
