--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
 
 <head>
     <title>
+        Coding Club first day puzzles
     </title>
-    <link rel="stylesheet" href="./styles.css"></head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
+</head>
 
 <body>
     <div class = "wrapper">
     <div class = "parallax-image"></div>
+    <div class = "main-text-grid">
     <div class = "main-text">
         <h1>Puzzle 1</h1>
-        <img src="Screenshot 2024-09-01 233848.png">
-        <h2>Enter password</h2>
+        <img src="Screenshot 2024-09-01 233848.png" class = "puzzle1img">
+        <div class = "filler"></div>
+        <h3>Enter password</h2>
         <input type = "password" required id = "pass1" placeholder="enter">
         <button type = "button" class = "login" onclick="nextpage()">Enter</button>
-        <h3>Password is all lowercase</h3>
+        
+        <h4>Password is all lowercase</h3>
         <div class = "try" style="display:block"></div>
+        </div>
+    <div class = "yippeeman">
+        <img src = "pixilart-drawing.png" >
+        </div>
     </div>
     </div>
     <script src="./script.js"></script>
     
 </body>
-
-</html>
 
 </html>
