--- a/3rdpage.html
+++ b/3rdpage.html
@@ -12,16 +12,15 @@
 </head>
 
 <body>
-    <div class = "wrapper">
+    <div class = "wrapper3">
     <div class = "parallax-image"></div>
     <div class = "main-text-grid">
     <div class = "main-text">
-        <h1>Puzzle 1</h1>
-        <img src="Screenshot 2024-09-01 233848.png" class = "puzzle1img">
-        <div class = "filler"></div>
+        <h1>Puzzle 3</h1>
+        <img src="Untitled drawing.png" class = "keyimage">
         <h3>Enter password</h2>
         <input type = "password" required id = "pass1" placeholder="4 letters">
-        <button type = "button" class = "login" onclick="nextpage()">Enter</button>
+        <button type = "button" class = "login" onclick="nextpage2()">Enter</button>
         
         <h4>Password is all lowercase</h3>
         <div class = "try" style="display:block"></div>
