--- a/winPage.html
+++ b/winPage.html
@@ -12,6 +12,7 @@
 
 <body>
     <h1> You win!</h1>
+    <p>I didn't expect anyone to get this far...let's just say the lack of css is intentional</p>
     <script src="./script.js" ></script>
     
 </body>
