--- a/5thpage.html
+++ b/5thpage.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-    <div class = "wrapper">
+    <div class = "wrapper5">
     <div class = "parallax-image"></div>
     <div class = "main-text-grid">
     <div class = "main-text">
-        <h1>Puzzle 1</h1>
-        <img src="Screenshot 2024-09-01 233848.png" class = "puzzle1img">
+        <h1>Puzzle 5</h1>
+        <h1>022030550004015000051541315544<br>0505540550505550505005555033001</h1>
         <div class = "filler"></div>
         <h3>Enter password</h2>
-        <input type = "password" required id = "pass1" placeholder="4 letters">
-        <button type = "button" class = "login" onclick="nextpage()">Enter</button>
+        <input type = "password" required id = "pass1" placeholder="6 letters">
+        <button type = "button" class = "login" onclick="nextpage4()">Enter</button>
         
         <h4>Password is all lowercase</h3>
         <div class = "try" style="display:block"></div>
