--- a/6thpage.html
+++ b/6thpage.html
@@ -12,22 +12,21 @@
 </head>
 
 <body>
-    <div class = "wrapper">
+    <div class = "wrapper6">
     <div class = "parallax-image"></div>
     <div class = "main-text-grid">
-    <div class = "main-text">
-        <h1>Puzzle 1</h1>
-        <img src="Screenshot 2024-09-01 233848.png" class = "puzzle1img">
-        <div class = "filler"></div>
+    <div class = "main-text1">
+        <h1>Puzzle 6</h1>
+        <img src="IMG_5246.jpg" class="haha" >
         <h3>Enter password</h2>
-        <input type = "password" required id = "pass1" placeholder="4 letters">
-        <button type = "button" class = "login" onclick="nextpage()">Enter</button>
+        <input type = "password" required id = "pass1" placeholder="8 letters">
+        <button type = "button" class = "login" onclick="nextpage5()">Enter</button>
         
         <h4>Password is all lowercase</h3>
         <div class = "try" style="display:block"></div>
         </div>
     <div class = "yippeeman">
-        <img src = "pixilart-drawing.png" onclick="play1()">
+        <img src = "pixilart-drawing.png" >
         </div>
     </div>
     </div>
